# patron

./: .gitignore  Makefile  README.md  build.sh  dune  dune-project
.github/workflows/: check.yml
patron-DB/AllocSize/24-donor/: log.txt
patron-DB/AllocSize/patron-10/: log.txt
patron-DB/DerefExp/22-donor/: log.txt
patron-DB/DerefExp/6-donor/: log.txt
patron-DB/DerefExp/patron-11/: log.txt
patron-DB/DerefExp/patron-12/: log.txt
patron-DB/DerefExp/patron-6/: log.txt
patron-DB/DivExp/1-donor/: log.txt
patron-DB/DivExp/2-1-donor/: log.txt
patron-DB/DivExp/7-donor/: log.txt
script/: check-format
src/: absDiff.ml  absPat.ml  ast.ml  bugPatDB.ml  chc.ml  cmdline.ml  diff.ml  diffJson.ml  doEdit.ml  dug.ml  dune  editFunction.ml  facts.ml  global.ml  inline.ml  main.ml  maps.ml  modeling.ml  options.ml  parser.ml  patMat.ml  patTrans.ml  patch.ml  patgen.ml  patmat.ml  rels.ml  semCons.ml  semRules.ml  symDiff.ml  transformer.ml  transformerHelper.ml  translator.ml  transplanter.ml  utils.ml  z3env.ml  z3utils.ml
test/: sparrow-all  sparrow-all.sh
test/dvbstreamer/: main.c
test/elvis-tiny/: main.c
test/example01/: main.c
test/example01_donee/: main.c
test/example01_donee1/: label.json
test/example01_donee2/: main.c
test/mini-sam2p/: main.c
test/mini-sam2p_pat/: main.c
test/minimini/: main.c
test/nageru/: main.c
test/nageru-alter/: main.c
test/owasp_bo/: main.c  owasp_bo.c  owasp_bo_ast.json  owasp_bo_ast.txt  owasp_bo_patch.c
test/owasp_bo_pat/: main.c  owasp_bo_pat.c
test/sam2p/: main.c
test/sam2p_pat/: main.c
(+34 files in other folders)
