(library
 (name patronlib)
 (modules options)
 (wrapped false)
 (libraries cmdliner logger memtrace))

(executable
 (name main)
 (modules
  main
  maps
  z3env
  z3utils
  parser
  chc
  bugPatDB
  patTrans
  utils
  ; translator
  symDiff
  diff
  ; transplanter
  inline)
 (libraries
  patronlib
  yojson
  core
  core_unix.sys_unix
  z3
  cil
  cil.all-features
  ocamlgraph
  batteries)
 (preprocess
  (pps ppx_compare)))
