(library
 (name patronlib)
 (modules options)
 (wrapped false)
 (libraries cmdliner logger memtrace))

(executable
 (name main)
 (modules
  main
  maps
  z3env
  z3utils
  parser
  chc
  patMat
  modeling
  utils
  editFunction
  symDiff
  diff
  patch
  inline)
 (libraries
  patronlib
  yojson
  core
  core_unix
  z3
  cil
  cil.all-features
  ocamlgraph
  batteries)
 (preprocess
  (pps ppx_compare)))
