(library
 (name patronlib)
 (modules options)
 (wrapped false)
 (libraries cmdliner logger memtrace))

(executable
 (name main)
 (modules :standard \ options)
 (libraries
  patronlib
  yojson
  core
  core_unix
  z3
  cil
  cil.all-features
  ocamlgraph
  batteries)
 (preprocess
  (pps ppx_compare)))
